--- a/lab2/index.html
+++ b/lab2/index.html
@@ -5,7 +5,12 @@
 	<link rel="stylesheet" type="text/css" href="../css/site.css">
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 </head>
-<body>
+ <body>
+	<div id="content">
+		<h1>*hello people of the interweb*</h1>
 
-</body>
+		<p>My name is Aisha Gilbert and I am a second year proposed Games and Playable Media Major. I am from Castro Valley, Bay Area and am super interested in art and graphic design. My partners name is Jia Xu and is a first year proposed computer science major. He is from Sacramento and is interested in baking and gardening.☆</p>
+		<img src="file:///C:/Users/aisha/Downloads/D232249E-53A7-48CD-83A4-B2F6B6723957.jpg" width="400" height="500">
+	</div>
+ </body>
 </html>
