--- a/lab4/index.html
+++ b/lab4/index.html
@@ -6,6 +6,21 @@
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 </head>
 <body>
+<h1>Making a Salad</h1>
+<p>
+	1.Prepare ingredients
+			a.Cut lettuce
+		b.Cut tomato
+		c.Cut lemon
+			*Squeeze lemon juice
+		d.Fried bacon
+			*Cut bacon
+	2.Mix together
+		a.Pour everything into a bowl
+		b.Add salad dressing into bowl
+			c.mix
+
+</p>
 
 </body>
 </html>
