--- a/index.html
+++ b/index.html
@@ -9,9 +9,16 @@
 		<h1>Aisha's Page</h1>
 		<p>This page was generated from Wes' File Structure Template Repo.</p>
 
+<p><a href="sailors.html">All about sailors and pirates.</a></p>
+
+<a href="https://www.randomkittengenerator.com/">Link to important pirate kittens.</a>
+
+<img src="img/download.jpg" width=450>
+<div id="callout">
 		<h2>Second Heading</h2>
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.	</p>
 	</main>
+</div>
 
 
 </body>
