--- a/lab3/index.html
+++ b/lab3/index.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Lab X - Subject/Topic</title>
-	<link rel="stylesheet" type="text/css" href="../css/site.css">
-	<link rel="stylesheet" type="text/css" href="css/lab.css">
+	<title>Lab 3 File Structures</title>
 </head>
 <body>
-
+	<h1>Lab 3 File Structures</h1>
+	<p>The idea of this lab was to understand how to create a local file structure and how to add index.html files.</p>
+	<h2>Challenges</h2>
+	<p>We spent some time creating the file structure, and creating the index. file was a challenge for us.</p>
+	<h3>Results</h3>
+	<p>yeah！we made this file!</p>
+	<img src="" width=650>
+	<img src="file:///C:/Users/aisha/Pictures/Screenshots/Screenshot%20(63).png" width=650>
+	<h4>Screenshot 1</h4>
+	<img src="file:///C:/Users/aisha/Pictures/Screenshots/Screenshot%20(64).png" width=650>
+	<h4>Screenshot 2</h4>
+	<img src="file:///C:/Users/aisha/Pictures/Screenshots/Screenshot%20(65).png" width=650>
+	<h4>Screenshot 3</h4>
+	<img src="file:///C:/Users/aisha/Pictures/Screenshots/Screenshot%20(66).png" width=650>
+	<h4>Screenshot 4</h4>
 </body>
 </html>
