--- a/lab4/index.html
+++ b/lab4/index.html
@@ -6,21 +6,21 @@
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 </head>
 <body>
-<h1>Making a Salad</h1>
-<p>
-	1.Prepare ingredients
-			a.Cut lettuce
-		b.Cut tomato
-		c.Cut lemon
-			*Squeeze lemon juice
-		d.Fried bacon
-			*Cut bacon
-	2.Mix together
-		a.Pour everything into a bowl
-		b.Add salad dressing into bowl
-			c.mix
-
-</p>
-
+	<div id="content">
+		<h1>Challenges</h1>
+			<p>We were unclear on how to use javascript and how to view the outcome of that code. We were also unclear on whether or not task 1 and task 2 should be written out simply in a document or if it should be coded in a list format.
+		<h1>Problems</h1>
+			We were having trouble understanding some of the instructions and we are not sure if our format for task 4 is correct.
+		<h1>Results</h1>
+			We have a javascript code and an image in the img folder which is linked down below. We were able to create ordered lists for the psuedocoding tasks. I am hoping this will appear correctly on the chrome browser.
+			<pre><code>
+				// Have a 3 second timer
+			 // Allow user to select one of the options during the 3 second count down
+			 // Have a randomized option selected by the computer during the 3 second countdown
+			 // Show the chosen options on screen at the same time
+			 // Winner or loser title will be displayed based on results
+		 </pre></code>
+		<img src="file:///C:/Users/aisha/Downloads/animals-cats-cute-45170-min.jpg" width="400" height="300">
+	</div>
 </body>
 </html>
