--- a/lab4/index.html
+++ b/lab4/index.html
@@ -6,21 +6,19 @@
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 </head>
 <body>
-	<div id="content">
-		<h1>Challenges</h1>
-			<p>We were unclear on how to use javascript and how to view the outcome of that code. We were also unclear on whether or not task 1 and task 2 should be written out simply in a document or if it should be coded in a list format.
-		<h1>Problems</h1>
-			We were having trouble understanding some of the instructions and we are not sure if our format for task 4 is correct.
-		<h1>Results</h1>
-			We have a javascript code and an image in the img folder which is linked down below. We were able to create ordered lists for the psuedocoding tasks. I am hoping this will appear correctly on the chrome browser.
-			<pre><code>
-				// Have a 3 second timer
-			 // Allow user to select one of the options during the 3 second count down
-			 // Have a randomized option selected by the computer during the 3 second countdown
-			 // Show the chosen options on screen at the same time
-			 // Winner or loser title will be displayed based on results
-		 </pre></code>
-		<img src="file:///C:/Users/aisha/Downloads/animals-cats-cute-45170-min.jpg" width="400" height="300">
-	</div>
+	<body>
+  <h1>how to make a salad</h1>
+    <h2>prepare foods</h2>
+      <h3>	cut lettuce</h3>
+      <h3>	cut tomato</h3>
+      <h3>	speeze lemon juice</h3>
+      <h3>	fried bacon</h3>
+
+    <h2>put salad together</h2>
+      <h3>	add all things into a bowl</h3>
+      <h3>	add salad dressing</h3>
+      <h3>	mix</h3>
+</body>
+
 </body>
 </html>
