--- a/lab5/index.html
+++ b/lab5/index.html
@@ -6,6 +6,18 @@
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 </head>
 <body>
+<div id="content">
+			<img src="file:///C:/Users/aisha/Downloads/subaru.jpg" width=300>
+			<h1>Lab 5: Datatypes and Variables</h1>
+			<p>For this lab, my partner and I experimented with different functions in Javascript using atom and chrome.</p>
+			<h2>Challenges</h2>
+			<p>We were unsure what "br" meant and how it would be applied to our code.</p>
+			<h3>Results</h3>
+			<p>This is our completed index.html code in chrome.</p>
+			<h3>Script Output</h3>
+ <div class=output>
+         <script type="text/javascript" src="js/lab5.js"></script>
+ </div>
 
 </body>
 </html>
