--- a/lab5/index.html
+++ b/lab5/index.html
@@ -16,7 +16,7 @@
 			<p>This is our completed index.html code in chrome.</p>
 			<h3>Script Output</h3>
  <div class=output>
-         <script type="text/javascript" src="js/lab5.js"></script>
+         <script type="text/javascript" src="js/lab.js"></script>
  </div>
 
 </body>
