--- a/lab6/index.html
+++ b/lab6/index.html
@@ -7,6 +7,19 @@
 </head>
 <body>
 	<div id="content">
+			<img src="file:///C:/Users/aisha/Documents/GitHub/art101/lab6/img/IMG-8535.JPG" width=300>
+		<h1>Lab 6: Arrays and Objects</h1>
+			<p>My partner and I worked together and experimented with our new found knowledge on javascript.</p>
+		<h2>Challenges</h2>
+			<p>Not really any challenges just yet! The instructions were very clear and helpful, so we didn't have many issues. </p>
+		<h2>Probelms</h2>
+			<p>We were unable to successfully have our "console.log("My boyfriend's vehicle: " + myMainRide);" create the correct output when in our inspect tab in chrome. It just printed object object as the answer. </p>
+		<h2>Results</h2>
+			<p>This is my webpage!</p>
+		<div>
+			<h2>Script Output</h2>
+			<script src="js/lab.js"></script>
+	</div>
 
 	</div>
 </body>
