--- a/lab7/index.html
+++ b/lab7/index.html
@@ -8,11 +8,11 @@
 <body>
 	<div id="content">
 		<h1>Lab 7: Functions</h1>
-			<p>My partner and I worked together and experimented with different CSS codes to create this webpage.</p>
+			<p>My partner and I worked together to figure out why our javascript wasn't linking to our page at first. We then asked Emily for help and realized that there was a typo in our code. Instead of writing writeln, I had accidentally put writln which was causing the whole code to not work. However, now everything works!</p>
 		<h2>Challenges</h2>
-			<p>We were struggling linking our CSS page to our index.html. </p>
+			<p>We were struggling with having our Javascript link.</p>
 		<h2>Problems</h2>
-			<p>Not too many issues yet! </p>
+			<p>All of our problems were either solved through help from others or by looking closely at our code.</p>
 		<h2>Results</h2>
 			<p>This is my webpage!</p>
 		<div>
