--- a/lab6/index.html
+++ b/lab6/index.html
@@ -2,8 +2,7 @@
 <html>
 <head>
 	<title>Lab X - Subject/Topic</title>
-	<link rel="stylesheet" type="text/css" href="../css/site.css">
-	<link rel="stylesheet" type="text/css" href="css/lab.css">
+	<link rel="stylesheet" type="text/css" href="css/labs.css">
 </head>
 <body>
 	<div id="content">
